fix: z-indexes and open/close states

--- a/apps/site/src/app/(home)/page.module.scss
+++ b/apps/site/src/app/(home)/page.module.scss
@@ -28,7 +28,7 @@ $container-padding: 6rem;
 	top: 0;
 	left: 0;
 	right: 0;
-	z-index: 5000;
+	z-index: 900;
 	display: flex;
 	align-items: flex-start;
 	justify-content: center;
